--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+    <a 
+  href="https://erik-ricardos9.github.io/Milena-trindade-site/" 
+  target="_blank">
+  Milena Site
+</a>
+
 
     <!-- Fundo animado -->
 <div class="animated-bg"></div>
