--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     </div>
                     <div class="info-card">
                         <h3><i class="fas fa-car"></i> Como chegar</h3>
-                        <p>Local de fácil acesso com estacionamento disponível nas proximidades. Siga pela Av. José Betone Cunha em direção ao Jardim Vale do Sol.</p>
+                        <p>Local de fácil acesso, com estacionamento disponível nas proximidades. O salão fica na Avenida José Betone Cunha, no bairro Jardim Vale do Sol. Basta seguir pela própria avenida até o número do endereço.</p>
                     </div>
                 </div>
                 <div class="location-map">
@@ -225,8 +225,7 @@
                         <div class="step-content">
                           
                             <h3>Atenção!!!</h3>
-                            <p>Antes do agendamento, envio a confirmação e solicito 30% do valor para garantir seu horário.</p>
-                        </div>
+                            <p>Após a realização do agendamento, será solicitado um sinal de 30% do valor faltando uma semana para a data marcada, para garantir o horário!
                     </div>
                 </div>
                 <div class="booking-cta">
@@ -236,6 +235,7 @@
                         <a href="https://wa.me/+5518996769804" target="_blank" class="btn-whatsapp">
                             <i class="fab fa-whatsapp"></i> Agendar via WhatsApp
                         </a>
+                        <br>
                         <p class="small-text">Ou pelo Direct do Instagram: <strong>@milenatrindadehairstylist</strong></p>
                     </div>
                 </div>
