--- a/index.html
+++ b/index.html
@@ -225,7 +225,8 @@
                         <div class="step-content">
                           
                             <h3>Atenção!!!</h3>
-                            <p>Após a realização do agendamento, será solicitado um sinal de 30% do valor faltando uma semana para a data marcada, para garantir o horário!
+                            <p>Antes do agendamento, envio a confirmação e solicito 30% do valor para garantir seu horário.</p>
+                        </div>
                     </div>
                 </div>
                 <div class="booking-cta">
