adicionei uma loja

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     <li><a href="#services">Serviços</a></li>
                     <li><a href="#location">Localização</a></li>
                     <li><a href="#schedule">Horários</a></li>
+                    <li><a href="loja/">Minha Loja</a></li>
                     <li><a href="#booking" class="btn-booking">Agendar</a></li>
                 </ul>
             </div>
