bypass cache css

--- a/loja/index.html
+++ b/loja/index.html
@@ -7,7 +7,7 @@
 
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style.css?v=4">
 </head>
 <body>
 
@@ -15,14 +15,6 @@
 <header class="topo">
 <span class="categoria">MILENA STORE</span>
 
-
-<div class="ordenar">
-<select>
-<option>Mais novo ao mais antigo</option>
-<option>Menor preço</option>
-<option>Maior preço</option>
-</select>
-</div>
 </header>
 
 
