--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <a href="#home" class="logo">
                     <i class="fas fa-braids"></i>
                     <span>Milena Trindade</span>
+                    <p>AAAAAAAAAAAAAAAAAAAAAAssssAAAAAAAAp</p>
                 </a>
                 <button class="menu-toggle" id="menuToggle">
                     <i class="fas fa-bars"></i>
