--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                         <div class="step-content">
                           
                             <h3>Atenção!!!</h3>
-                            <p>Antes do agendamento, envio a confirmação e solicito 30% do valor para garantir seu horário.</p>
+                            <p>Após a realização do agendamento, será solicitado um sinal de 30% do valor faltando uma semana para a data marcada, para garantir o horário!</p>
                         </div>
                     </div>
                 </div>
