--- a/index.html
+++ b/index.html
@@ -151,8 +151,15 @@
                         <p>Local de fácil acesso, com estacionamento disponível nas proximidades. O salão fica na Avenida José Betone Cunha, no bairro Jardim Vale do Sol. Basta seguir pela própria avenida até o número do endereço.</p>
                     </div>
                 </div>
-                <div class="location-map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3696.008041560465!2d-51.445315699999995!3d-22.125669100000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9493f3eee08dc969%3A0x824bd012becf8835!2sAv.%20Jos%C3%A9%20Betone%20Cunha%2C%2048%20-%20Jardim%20Vale%20do%20Sol%2C%20Pres.%20Prudente%20-%20SP%2C%2019063-645!5e0!3m2!1spt-BR!2sbr!4v1765789735356!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>    
+               <div class="map-container">
+  <iframe 
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3696.008041560465!2d-51.445315699999995!3d-22.125669100000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9493f3eee08dc969%3A0x824bd012becf8835!2sAv.%20Jos%C3%A9%20Betone%20Cunha%2C%2048%20-%20Jardim%20Vale%20do%20Sol%2C%20Pres.%20Prudente%20-%20SP%2C%2019063-645!5e0!3m2!1spt-BR!2sbr!4v1765789735356!5m2!1spt-BR!2sbr"
+    loading="lazy"
+    allowfullscreen
+    referrerpolicy="no-referrer-when-downgrade">
+  </iframe>
+</div>
+    
                 </div>
             </div>
         </div>
